webdriver-tools : use of valueOf to instanciate primitive types